# web-radio

./: Cargo.toml  exercicios.ipynb  readme.md
src/: main.rs
src/objects/station/: station.rs  station_snapshot.rs
src/station/: station.rs
tests/: test_station_snapshot.rs
