[package]
name = "web-radio"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
soloud = "1.0.5"
yaml-rust2 = "0.10.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"
tokio = { version = "1", features = ["macros", "sync", "rt-multi-thread"] }
